--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         }
     ],
     "require": {
+        "php": ">=5.6.0",
         "lumeng/lumeng-php": "dev-master",
         "lumeng/lumeng-php-db": "dev-master"
     },
