--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Domain\\": "app/Domain"
+            "Foo\\Bar\\": "app/Foo/Bar"
         }
     }
 }
