--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "php": ">=5.6.0",
         "lumeng/lumeng-php": "dev-master",
         "lumeng/lumeng-php-db": "dev-master",
-        "lumeng/lumeng-php-extensions": "dev-master"
+        "lumeng/lumeng-php-extensions": "0.1.0"
     },
     "autoload": {
         "psr-4": {
