--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
     ],
     "require": {
         "php": ">=5.6.0",
-        "lumeng/lumeng-php": "dev-master",
-        "lumeng/lumeng-php-db": "dev-master",
+        "lumeng/lumeng-php": "0.1.0",
+        "lumeng/lumeng-php-db": "0.1.0",
         "lumeng/lumeng-php-extensions": "0.1.0"
     },
     "autoload": {
