--- a/config/env.example
+++ b/config/env.example
@@ -7,3 +7,11 @@ DB_PORT=3306
 DB_NAME=bbs
 DB_USERNAME=bbs
 DB_PASSWORD=bbs
+
+# Redis配置
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+
+# 事件监听守护进程的配置
+EVENT_LISTEND_USER=nobody
+EVENT_LISTEND_GROUP=nobody
