--- a/config/env.example
+++ b/config/env.example
@@ -12,6 +12,6 @@ DB_PASSWORD=bbs
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
 
-# 事件监听守护进程的配置
-EVENT_LISTEND_USER=nobody
-EVENT_LISTEND_GROUP=nobody
+# 事件监听配置
+EVENT_LISTEN_DISABLE_MULTI_WORKERS=0
+EVENT_LISTEN_MAX_EVENT_NUM=1000
